Fixed how buttons stacked on mobile view

--- a/stlye.css
+++ b/stlye.css
@@ -90,17 +90,19 @@ body {
     }
 
     .header-container {
-        height: 25vh;
+        height: 30vh;
         background-color: #f4f1e0;
         border-bottom: 4px solid #321e1e;
         border-right: none;
-        gap: 1rem;
+        gap: .5rem;
         text-align: center;
     }
 
     .middle-header {
+        justify-content: center;
         flex-direction: row;
-        gap: 2rem;
+        flex-wrap: wrap;
+        gap: 1rem;
     }
 
 }
